--- a/PawLove/pawlove/package.json
+++ b/PawLove/pawlove/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "saas": "^1.0.0"
   },
   "devDependencies": {
