--- a/PawLove/pawlove/package.json
+++ b/PawLove/pawlove/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.6.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "saas": "^1.0.0"
   },
